fixed broken slider customization on firefox

--- a/src/hazelweb/www/style.css
+++ b/src/hazelweb/www/style.css
@@ -1428,7 +1428,8 @@ input.slider[type=range]{
   height: var(--slider-livelit-height);
 }
 
-input.slider[type=range]::-webkit-slider-runnable-track {
+input.slider[type=range]::-webkit-slider-runnable-track,
+input.slider[type=range]::-moz-range-track {
   width: var(--slider-livelit-width);
   height: 2px;
   background: #ccc;
@@ -1467,7 +1468,8 @@ input.slider[type=range]:focus {
   outline: none;
 }
 
-input.slider[type=range]:focus::-webkit-slider-runnable-track {
+input.slider[type=range]:focus::-webkit-slider-runnable-track,
+input.slider[type=range]:focus::-moz-range-track {
   background: #ccc;
 }
 /*
@@ -1587,6 +1589,7 @@ input.slider::-moz-range-track {
 }
 .color-livelit .color-picker .hue-slider {
   -webkit-appearance: none;
+  /*border: 1px solid white; andrew */
   display: block;
   transform-origin: top left;
   transform: rotate(90deg) translate(0, -100%);
@@ -1600,7 +1603,8 @@ input.slider::-moz-range-track {
   cursor: grabbing;
 }
 
-.color-livelit .color-picker .hue-slider::-webkit-slider-runnable-track {
+.color-livelit .color-picker .hue-slider::-webkit-slider-runnable-track,
+.color-livelit .color-picker .hue-slider::-moz-range-track {
   background: linear-gradient(to right, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
   height: 100%;
 }
